# cvee

./: Cargo.toml  README.md
src/: cli.rs  logging.rs  main.rs  skills.rs
src/skills/: io.rs  mod.rs  optimise.rs  types.rs
src/skills/optimizers/: mod.rs  openai.rs  sorting.rs
testdata/: job_ad.txt  skills.json
