[package]
name = "cvee"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = "4.5.20"
colored = "2.1.0"
fern = "0.7.0"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
